# yycapture

./: CMakeLists.txt  main.cpp  main.qml  obscapture.cpp  obscapture.hpp
minimal/: obscapture.cpp  obscapture.hpp
obscap/: base.hpp  capture_manager.cpp  capture_manager.hpp  capture_source_wrapper.cpp  capture_source_wrapper.hpp  display_wrapper.cpp  display_wrapper.hpp  obs_core_wrapper.cpp  obs_core_wrapper.hpp  scene_wrapper.cpp  scene_wrapper.hpp  source_wrapper.cpp  source_wrapper.hpp  utils.cpp  utils.hpp
